# tsaug

./: .coveragerc  .gitignore  .travis.yml  README.md  mypy.ini  setup.cfg  tox.ini
.github/workflows/: pythonpublish.yml
docs/: augmentation_classes.rst  augmentation_funcs.rst  conf.py  developer.rst  index.rst  install.rst  quickstart.ipynb  quickstart.npy  quickstart.rst  references.rst  releasehistory.rst  requirements.txt
docs/notebook/: X.npy  Y.npy
src/tsaug/: __init__.py  affine.py  augmentor.py  crop.py  cross_sum.py  dimensionalize.py  jitter.py  resample.py  reverse.py  sidetrack.py  time_warp.py  trend.py  zoom.py
src/tsaug/_augmenter/: __init__.py  add_noise.py  base.py  convolve.py  crop.py  drift.py  dropout.py  pool.py  quantize.py  resize.py  reverse.py  time_warp.py
src/tsaug/_augmenter/arxiv/: augmentor.py  crop.py  jitter.py  sidetrack.py  zoom.py
src/tsaug/visualization/: __init__.py  _visualization.py
tests/: test_classes.py  test_crop.py  test_functions.py  test_pipe.py  test_random_seed.py  test_resample.py
