[metadata]
name = tsaug
version = 0.1.0
author = Arundo Analytics, Inc.
maintainer = Tailai Wen
maintainer_email = tailai.wen@arundo.com
url = https://github.com/arundo/tsaug
description = A package for time series augmentation
long_description = file: README.md
long_description_content_type= text/markdown
keywords = time series, data augmentation
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
license = Apache License 2.0

[options]
zip_safe = False
python_requires = >=3.5
package_dir =
    =src
packages = find:
install_requires =
    numpy>=1.14
    scipy>=1.3

[options.packages.find]
where = src
exclude =
    tests
    docs

[options.extras_require]
testing =
    pytest