[metadata]
name = tsaug
version = 0.2.0
author = Arundo Analytics, Inc.
maintainer = Tailai Wen
maintainer_email = tailai.wen@arundo.com
url = https://github.com/arundo/tsaug
description = A package for time series augmentation
long_description = file: README.md
long_description_content_type= text/markdown
keywords = time series, data augmentation
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
license = Apache License 2.0

[options]
zip_safe = False
python_requires = >=3.5
package_dir =
    =src
packages = find:
install_requires =
    numpy>=1.14
    scipy>=1.1

[options.packages.find]
where = src
exclude =
    tests
    docs

[options.extras_require]
test =
    pytest>=4
    tox>=3
    coverage>3.6,<5
    pytest-cov>=2.7
    coveralls>=1.7
    mypy>=0.641
    scikit-learn>=0.22
doc =
    sphinx>=2.4,<3
    sphinx_rtd_theme<0.5
    nbsphinx>=0.4
    python-dateutil>=2.5
    jupyter>=1
    librosa>=0.7,<0.8
dev =
    black==19.3b0
    isort==4.3.21